Bug 42778 - IDE: Breakpoints Pass Count doesn't work
Summary: IDE: Breakpoints Pass Count doesn't work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
3.4.3 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-10 03:32 UTC by Niklas Johansson
Modified: 2011-11-30 04:42 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Niklas Johansson 2011-11-10 03:32:12 UTC
Problem description: 

Steps to reproduce:
1. Open the Basic IDE (Alt+F11)
2. create a new macro something like
Sub testBreakpointsPassCount
    For i = 0 To 5
        MsgBox i
    Next
End Sub
3. Put a breakpoint on the middle row with the text "MsgBox i" Go to Manage Breakpoints and put in a number (for example 2) in "Pass Count"
4. Press OK
5.Open up Manage Breakpoints again and you'll see that your breakpoint is all messed up

Current behavior:
Your breakpoint moves or it will work as a normal breakpoint and stop the first time

Expected behavior:
It should pass the breakpoint the number of times entered without stopping and the stop the next time

Platform (if different from the browser): 
Seen the behavior with Mac OS X 10.5.8, LibreOffice 3.4.3
and with Win 7 64-bit, LibreOffice 3.4.4
              
Browser: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:7.0.1) Gecko/20100101 Firefox/7.0.1
Comment 1 Niklas Johansson 2011-11-10 09:41:46 UTC
Works as expected in LibreOffice 3.3.3 and LibreOffice 3.3.4 on Windows XP.
Comment 2 Eike Rathke (retired, only occasionally showing up) 2011-11-30 04:42:56 UTC
Fixed on master with http://cgit.freedesktop.org/libreoffice/core/commit/?id=0083479a80de831b0ae90877aa4f5d6c4670eb49