Fixed fdo#42778 pass count in Manage Breakpoints and crash in dialog

When entering pass count 2 it is expected that the breakpoint is
passed two times before breaking not to break the second time.

Also fixed a crash due to dangling pointers of breakpoints.